# bio-inspired-thesis-chapter6

./: LICENSE  README.md
.github/workflows/: build.yml  ci.yml  ros1-ci.yml  validate.yml
data/aliengo_model/: README.md  aliengo_urdf.urdf  experiment_data.csv  gait_params.yaml  model_specs.md
data/chapter6_deliverables/: INDEX.txt  build_chapter6_from_logs.py  run_robot_check_then_figures.sh
data/chapter6_deliverables/_exp2_refresh/: exp2_summary.txt  table6_2_power_profile.csv
data/chapter6_deliverables/meta/: CHAPTER6_EXPERIMENT_AUDIT.md  PROVENANCE.md  STRICT_RERUN_BATCH.md  sources_index.json
data/chapter6_deliverables/tables/: Table_6_1_Sensor_Calibration.csv  Table_6_2_Power_Profile.csv  Table_6_3_Maze_Navigation_All_Trials_Logged.csv  Table_6_3_Maze_Summary.txt  Table_6_3a_SLAM_Landmark_Errors_All_Logged.csv  Table_6_3a_SLAM_Summary.txt  Table_6_4_Dynamic_Obstacle_and_Fault_Tolerance.txt  Table_6_4b_Scalability_Simulation_B.txt  Table_6_5_CNN_Detection_All_Logged.csv  Table_6_6_Pheromone_Lateral_Summary.txt  Table_6_7_SNR_Switchover_Logged.csv
data/raw_logs/: camera_v4l2_pub.py  exp1_run_details_20260402_060735.txt  exp1_run_details_20260409_072707.txt  exp1_run_details_20260409_073214.txt  exp1_run_details_20260409_075758.txt  exp2_hw_check_20260407_061242.txt  exp2_hw_check_20260409_074037.txt  exp2_hw_check_20260409_080602.txt  exp2_summary.txt  exp2_summary_20260408_234100.txt  exp3_status_20260402_065628.txt  exp3_status_20260402_065733.txt  exp3_status_20260402_070133.txt  exp3_status_20260402_071322.txt  exp3_status_20260407_074750.txt  exp3_status_20260407_075211.txt  exp3_status_20260407_075647.txt  exp3_status_20260407_080027.txt  exp3_status_20260409_074321.txt  exp3_trajectory_20260402_072320.csv  fastdds_watch_serial_udp_only.xml  fix_all_sensors.sh  generate_exp3_figures.py  generate_exp4_outputs.py  imu_alias_node.py  imu_drift_from_data.txt  install_novnc_browser_viewer.sh  odom_tf_bridge.py  record_rgb_mp4.py  regenerate_tables_real.py  rosbag_exp4_20260404_021816_README.txt  run_all_experiments.sh  run_all_simulations.sh  run_ch6_strict_batch.sh  run_exp1_auto.py  run_exp1_hardware_integration.py  run_exp2_full_pipeline.sh  run_exp2_power_protocol.py  run_exp3_full_strict.sh  run_exp4_stack.sh  (+31 more)
data/raw_logs/rosbag_exp4_20260404_021816/: metadata.yaml
data/raw_logs/scan_probe/: metadata.yaml
data/simulation_data/: exp7D_940nm_results_20260416_113330.csv  field_trials.csv  power_log.csv  simulation_C_fast.py
src/appeal_experiments/: README.md  THESIS_UPDATE_RESPONSE.md  exp7D_940nm_led_validation.py  run_all.sh  simulation_B_fast.py  simulation_B_scalability_fixed.py  simulation_C_fault_tolerance_fixed.py  update_chapter6_tables.py
src/appeal_experiments/outputs/: appeal_results_report.md  baseline_summary.csv  field_trials_summary.csv  localization_summary.csv  memory_summary.csv  power_summary.csv
src/formica_experiments/: README.md  hardware_checker.py  package.xml  remap_save_formica.sh  run_mapping_then_chapter6.sh  setup.cfg  troubleshoot_serial.sh
src/formica_experiments_ros1/: CMakeLists.txt  package.xml
src/formica_experiments_ros1/config/: calibration.yaml  formica.urdf  robot_params.yaml
src/formica_experiments_ros1/launch/: exp1_calibration.launch  exp2_power.launch  exp3_slam.launch  exp4_nav.launch  exp5_fault.launch  exp6_cnn.launch  exp7_pheromone.launch  formica_simulation.launch  robot_with_laserscan.launch
src/formica_experiments_ros1/scripts/: data_logger.py  exp1_sensor_calibration.py  exp2_postprocess.py  exp2_power_profiling.py  exp3_slam_mapping.py  exp4_maze_navigation.py  exp5_obstacle_fault.py  exp6_cnn_detection.py  exp7_pheromone_trail.py  exp7_postprocess.py  hardware_checker.py  ina219_power_monitor.py  task2_filter_csv.py  task2_mq_ethanol_record.py
(+107 files in other folders)
