<?xml version="1.0"?>
<package format="2">
  <name>formica_experiments</name>
  <version>1.0.0</version>
  <description>Chapter 6 experimental validation for FormicaBot (ROS 1 Noetic - Single Robot)</description>
  <maintainer email="robot@formica.bot">FormicaBot Research</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_generation</depend>

  <test_depend>rostest</test_depend>
  <test_depend>roslaunch</test_depend>
</package>
